--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,8 +1,13 @@
 .top-bar {
-  background: white
+  background: white;
+  border-bottom: solid 1px rgba(0,0,0,.14);
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  
 }
 
-.top-bar a{
+.top-bar .nav-button {
   background: white;
   color: grey;
   &:hover{
@@ -10,6 +15,7 @@
     color: black;
     transition: 0.30s
   }
+
 }
 
 .top-bar ul{
@@ -19,4 +25,8 @@
 .top-bar-right li{
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.callout .error-title{
+  color: #ce4c4c;
 }
