--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -4,7 +4,7 @@
   margin-top: 0;
   margin-left: 0;
   margin-right: 0;
-  
+
 }
 
 .top-bar .nav-button {
@@ -25,8 +25,14 @@
 .top-bar-right li{
   margin-left: 20px;
   margin-right: 20px;
+  margin-top: 0px;
+  margin-top: 0px;
 }
 
 .callout .error-title{
   color: #ce4c4c;
+}
+
+.welcome-sign{
+  height: auto;
 }
