--- a/app/assets/stylesheets/pages_background.scss
+++ b/app/assets/stylesheets/pages_background.scss
@@ -6,3 +6,7 @@ $sub-color: #f4f4f5;
   box-shadow: 2px 2px 18px 1px #7076892b;
   background: $sub-color;
 }
+
+.mainpage-content{
+  background: $main-color;
+}
