--- a/app/views/mainpage/index.html.erb
+++ b/app/views/mainpage/index.html.erb
@@ -1,7 +1,7 @@
 <div class="mainpage-content">
   <div class="grid-container">
     <div class="grid-x">
-      <h1 class="cell">The engagement platform<br>that makes business less awkward</h1>
+      <h1 class="cell head-title">The engagement platform<br>that makes business less awkward</h1>
 
     </div>
     </div>
