--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,3 +1,29 @@
+.title-bar{
+  background-color: white;
+  border-bottom: solid 1px rgba(0,0,0,.14);
+
+}
+
+.menu-icon{
+  transition: 0.20s
+}
+.title-bar-title{
+  color: #34393f;
+  font-size: bold;
+  text-align: center;
+  margin-left: 45%;
+  margin-right: 5%;
+}
+.title-bar-right{
+  text-align: left;
+}
+
+.menu-icon::after{
+  background: #151515;
+  -webkit-box-shadow: 0 7px 0 #151515, 0 14px 0 #151515;
+
+}
+
 .top-bar {
   background: white;
   border-bottom: solid 1px rgba(0,0,0,.14);
@@ -23,8 +49,6 @@
 }
 
 .top-bar-right li{
-  margin-left: 20px;
-  margin-right: 20px;
   margin-top: 0px;
   margin-top: 0px;
 }
