Created sign-in logic, more css, and fixed things in mobile view

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,6 +3,11 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.head{
+  animation-duration: 2.5s;
+  text-align: left;
+}
+
 .head-title{
   font-weight: 900;
 }
