--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     </div>
   </div>
 
-  <div class="top-bar row columns" id="mobile-menu" data-animate="hinge-in-from-top">
+  <div class="top-bar row columns" id="mobile-menu">
     <div class="top-bar-left" data-dropdown-menu>
       <ul class="vertical menu medium-horizontal" data-dropdown-menu>
         <li  class="menu-text"> <%= link_to image_tag("logo.png", width:"150"), root_path %> </li>
