--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,9 +1,23 @@
+$sub-color: #f4f4f5;
+$main-color: #EAEEF2;
+$accent: #1ac74f;
+
 .title-bar{
   background-color: white;
   border-bottom: solid 1px rgba(0,0,0,.14);
-
 }
-
+.mainpage-action-button{
+  background: $accent;
+  border-radius: 25px;
+  font-size: 1.20em;
+  margin-top: 18px;
+  margin-bottom: 18px;
+  &:hover{
+    background: white;
+    border-color: $accent;
+    color: $accent;
+  }
+}
 .menu-icon{
   transition: 0.20s
 }
@@ -11,7 +25,7 @@
   color: #34393f;
   font-size: bold;
   text-align: center;
-  margin-left: 45%;
+  margin-left: 40%;
   margin-right: 5%;
 }
 .title-bar-right{
