--- a/app/views/mainpage/index.html.erb
+++ b/app/views/mainpage/index.html.erb
@@ -4,7 +4,7 @@
       <h1 class="cell head-title">The engagement platform<br>that makes business less awkward</h1>
       <p class="cell small-9 large-6">Curate is an authentic customer engagement tool created to document a customer's journey through storytelling.</p>
     </div>
-    <div class="grid-x ">
+    <div class="grid-x animated fadeIn ">
     <%- if current_user -%>
       <%= link_to 'Create a story', root_path , class: "small-4 large-2 button mainpage-action-button" %>
     <%- else -%>
