--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,9 @@
 
-body {
+html, body {
   font-family: 'Roboto', sans-serif;
+  height: 100%;
+  flex-direction: column;
+  display: flex;
 }
 
 .head{
