--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -4,10 +4,6 @@
   min-width: 300px;
 }
 
-.customer-form{
-border-top: solid #cbd6e2 1px;
-padding-top: 10px;
-}
 
 .profile-picture{
   border-radius: 50%;
@@ -15,11 +11,21 @@ padding-top: 10px;
   margin: 0 auto;
   padding: 10px;
 }
+.profile-picture-container{
+  border-bottom: solid 1px #cbd6e2;
+}
+
+.picture-submit{
+  margin: 20px auto;
+}
 
 .accordion-menu-form{
+    padding-top: 20px;
+
   a{
     color: #2D3F4E;
     font-weight: bold;
+    background-color: $sub-color
   }
 }
 
