--- a/app/views/layouts/_customer_creation.html.erb
+++ b/app/views/layouts/_customer_creation.html.erb
@@ -1,11 +1,12 @@
 <div class="grid-y">
-    <div class="grid-y">
-     <%= image_tag("http://placebeard.it/640x480", width:"150", class: "profile-picture")%>
-    </div>
     <div class="customer-form">
       <%= form_for :customer do |form| %>
+      <div class="grid-y profile-picture-container">
+        <%= image_tag "profile-default.png", width:"150", class: "profile-picture", id: "profile-pic" %>
+        <%= form.file_field :profile_picture, class:"picture-submit cell", onChange: "changePicture()" %>
+      </div>
       <ul class="accordion accordion-menu-form" data-accordion data-allow-all-closed="true">
-        <li class="accordion-item" data-accordion-item>
+        <li class="accordion-item is-active" data-accordion-item>
           <a class="accordion-title">Contact Information</a>
           <div class="accordion-content" data-tab-content>
             <div class="grid-x">
