--- a/app/assets/stylesheets/pages_background.scss
+++ b/app/assets/stylesheets/pages_background.scss
@@ -27,6 +27,7 @@ $sub-color: #f4f4f5;
 
 .customer-index{
   background: $sub-color;
-  -webkit-box-shadow: inset 0px 0px 15px -6px #000000;
-  box-shadow: inset 0px 0px 15px -6px #000000;
+  -webkit-box-shadow: inset 0px 0px 15px -6px #7f7979a1;
+  box-shadow: inset 0px 0px 15px -6px #7f7979a1;
+  background-size: cover;
 }
