--- a/app/views/layouts/_topbar_customers.html.erb
+++ b/app/views/layouts/_topbar_customers.html.erb
@@ -1,4 +1,4 @@
-<div class="top-bar top-bar-secondary row columns sticky" data-sticky data-margin-top="0" id="mobile-menu">
+<div class="top-bar top-bar-secondary row columns" id="mobile-menu">
   <div class="top-bar-left" data-dropdown-menu>
     <ul class="vertical menu medium-horizontal" data-dropdown-menu>
       <li  class="menu-text"> <%= link_to image_tag("logo-secondary.png", width:"150"), root_path %> </li>
