--- a/app/views/layouts/_customer_creation.html.erb
+++ b/app/views/layouts/_customer_creation.html.erb
@@ -2,6 +2,7 @@
     <div class="customer-form">
       <%= form_for :customer do |form| %>
       <div class="grid-y profile-picture-container">
+        <h2 class="customer-form-title" >Add New Customer</h2>
         <%= image_tag "profile-default.png", width:"150", class: "profile-picture", id: "profile-pic" %>
         <%= form.file_field :profile_picture, class:"picture-submit cell", onChange: "changePicture()" %>
       </div>
