--- a/app/views/layouts/_customer_creation.html.erb
+++ b/app/views/layouts/_customer_creation.html.erb
@@ -1,8 +1,8 @@
 <div class="grid-y">
-    <div class="customer-form">
+    <div class="customer-form" >
       <%= form_for :customer do |form| %>
       <div class="grid-y profile-picture-container">
-        <h2 class="customer-form-title" >Add New Customer</h2>
+        <h4 class="customer-form-title" >Add New Customer</h4>
         <%= image_tag "profile-default.png", width:"150", class: "profile-picture", id: "profile-pic" %>
         <%= form.file_field :profile_picture, class:"picture-submit cell", onChange: "changePicture()" %>
       </div>
@@ -30,7 +30,7 @@
           </div>
         </li>
         <li class="accordion-item" data-accordion-item>
-          <a class="accordion-title">Business Information (optional)</a>
+          <a class="accordion-title">Business Information<br>(optional)</a>
           <div class="accordion-content" data-tab-content>
             <div class="grid-x">
               <%= form.label :company_name%>
