-Added the index page to show customers of a specific user, and all its react components

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,11 +1,11 @@
-
-<div class="customer-index">
+<div class="customer-index" >
   <div class="grid-x">
-
-    <div class="callout-client-creation callout cell small-4">
-      <%= render "layouts/customer_creation" %>
-    </div>
-    <div class="cell" id="app">
+    <div class=" callout-client-creation cell medium-3 small-4" >
+      <div class=" callout">
+        <%= render "layouts/customer_creation" %>
+      </div>
+      <div class="cell small-offset-1 auto  customer-grid" id="app">
+      </div>
     </div>
   </div>
 </div>
