Reversed_migration_to_react

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <button class="menu-icon" type="button" data-toggle="mobile-menu"></button>
     </div>
   </div>
-  <%- if current_page?(mainpage_index_path) || current_page?(new_user_session_path) ||  current_page?(new_user_registration_path) -%>
+  <%- if current_page?(mainpage_index_path) || current_page?(new_user_session_path) ||  current_page?(new_user_registration_path) || current_user.nil?-%>
     <%= render "layouts/topbar_normal" %>
   <%- else -%>
     <%= render "layouts/topbar_customers" %>
