-Added-sticky form functionality
-Made customer cards clickable

-Build initial show page for customer

-Regressed back to a RoR form

-added css and button to redirect signed in user to the index page

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,7 +1,7 @@
-<div class="customer-index" >
+<div class="customer-index" data-sticky-container >
   <div class="grid-x">
-    <div class=" callout-client-creation cell medium-3 small-4" >
-      <div class=" callout">
+    <div class=" callout-client-creation cell medium-3 small-4 "  >
+      <div class=" callout sticky" data-sticky data-top-anchor="mobile-menu" data-margin-top="5.8" >
         <%= render "layouts/customer_creation" %>
       </div>
       <div class="cell small-offset-1 auto  customer-grid" id="app">
