-Added a show page for customers
-WIP (delete functionality)

--- a/app/assets/stylesheets/customercard.scss
+++ b/app/assets/stylesheets/customercard.scss
@@ -74,3 +74,10 @@
   font-weight: bold;
   color: white;
 }
+
+.dashboard-tag{
+  padding: 8px;
+  border-radius: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
