-Added delete button with functionality
-Moved customer form to own page for conssitency sake

--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -3,8 +3,13 @@
 .callout-client-creation{
   min-width: 300px;
   max-height: 800px;
+
 }
 
+.form-container-main{
+  margin-top: 60px;
+  max-width: 600px;
+}
 
 .profile-picture{
   border-radius: 50%;
