--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -118,7 +118,9 @@ $accent: #1ac74f;
   }
 }
 .dashboard-button{
-  padding-top:25px;
+  font-size: 1em;
+  padding-top:20px;
+  padding-left: 40px;
   background-color: transparent;
   color: $accent;
   border-color: $accent;
