--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,11 +1,6 @@
 <div class="customer-index" data-sticky-container >
   <div class="grid-x">
-    <div class=" callout-client-creation cell medium-3 small-4 "  >
-      <div class=" callout sticky" data-sticky data-top-anchor="mobile-menu" data-margin-top="5.8" >
-        <%= render "layouts/customer_creation" %>
-      </div>
-      <div class="cell small-offset-1 auto  customer-grid" id="app">
-      </div>
+    <div class="cell auto  customer-grid" id="app">
     </div>
   </div>
 </div>
