--- a/app/views/layouts/_topbar_normal.html.erb
+++ b/app/views/layouts/_topbar_normal.html.erb
@@ -4,6 +4,7 @@
       <li  class="menu-text"> <%= link_to image_tag("logo.png", width:"150"), root_path %> </li>
       <%- if current_user -%>
       <li class="dashboard-button"><%= link_to 'DASHBOARD', user_customers_path(current_user),  class: "dashboard-button customer-button button"%> </li>
+      <li class="dashboard-button"><%= link_to 'CREATE CUSTOMER', new_user_customer_path(current_user),  class: "dashboard-button customer-button button"%> </li>
       <%- end -%>
     </ul>
   </div>
