--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="title-bar menu-horizontal" data-responsive-toggle="mobile-menu" data-hide-for="medium">
+  <div class="title-bar menu-horizontal mobile-navbar" data-responsive-toggle="mobile-menu" data-hide-for="large">
     <div class="title-bar-title">Menu</div>
     <div class="title-bar-right">
       <button class="menu-icon" type="button" data-toggle="mobile-menu"></button>
