--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -34,8 +34,9 @@ $accent: #1ac74f;
 }
 
 .menu-icon::after{
-  background: #151515;
-  -webkit-box-shadow: 0 7px 0 #151515, 0 14px 0 #151515;
+  background: #FFF;
+  background-size: 30px;
+  -webkit-box-shadow: 0 7px 0 #FFFF, 0 14px 0 #FFF;
 
 }
 
@@ -69,7 +70,8 @@ $accent: #1ac74f;
 }
 
 .top-bar ul{
-  background: white
+  background: white;
+
 }
 
 .top-bar-right li{
@@ -120,7 +122,7 @@ $accent: #1ac74f;
 .dashboard-button{
   font-size: 1em;
   padding-top:20px;
-  padding-left: 40px;
+  padding-left: 20px;
   background-color: transparent;
   color: $accent;
   border-color: $accent;
@@ -129,4 +131,14 @@ $accent: #1ac74f;
     background-color: transparent;
     border-width: medium;
   }
+}
+
+.mobile-navbar{
+ background: #2d3f4f;
+ min-height: 50px;
+ .title-bar-title{
+  font-size: 30px;
+  font-family: 'Roboto';
+   color: white;
+ }
 }
