--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -3,7 +3,7 @@
     <div class="customer-form">
       <%= form_for [current_user, @customer] do |form| %>
       <div class="grid-y profile-picture-container">
-        <h4 class="customer-form-title" >Add New Customer</h4>
+        <h4 class="customer-form-title cell small-offset-3" >Add New Customer</h4>
         <%= image_tag "profile-default.png", width:"150", class: "profile-picture", id: "profile-pic" %>
         <%= form.file_field :profile_picture, class:"picture-submit cell", onChange: "changePicture()" %>
       </div>
