-Added error messages for all forms
-Fixed error messages on signup and log in

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -143,3 +143,13 @@ $accent: #1ac74f;
    color: white;
  }
 }
+
+.message-callout{
+  position: relative;
+  margin-bottom: 0;
+  text-align: center;
+  background: #EAEEF2;
+  color: #33475b;
+  font-size: 2em;
+  padding: 0;
+}
