--- a/app/views/mainpage/index.html.erb
+++ b/app/views/mainpage/index.html.erb
@@ -1,3 +1,16 @@
+<% flash.each do |name, msg| %>
+<div class="callout primary message-callout">
+  <% if msg.class == Array %>
+  <% msg.each do |message| %>
+  <%= content_tag :div, message, :id => "flash_#{name}" %>
+  <% end %>
+  <% else %>
+
+  <%= content_tag :div, msg, :id => "flash_#{name}" %>
+
+  <% end %>
+</div>
+<% end %>
 <div class="mainpage-content">
   <div class="grid-container">
     <div class="grid-x head animated fadeIn">
