--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -2,13 +2,14 @@
 
 .callout-client-creation{
   min-width: 300px;
-  max-height: 800px;
+  max-height: 200px;
 
 }
 
 .form-container-main{
-  margin-top: 60px;
-  max-width: 600px;
+  margin-top: 20px;
+  max-width: 500px;
+
 }
 
 .profile-picture{
@@ -32,12 +33,15 @@
 }
 
 .accordion-menu-form{
-    padding-top: 20px;
+    padding-top: 10px;
+    input{
+      margin-bottom: 8px;
+    }
 
   a{
     color: #2D3F4E;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 0.80em;
     background-color: $sub-color
   }
 }
@@ -81,5 +85,26 @@
   }
   h3{
     color: #33475b;
+  }
+}
+
+.customer-add-errors{
+  text-align: left;
+}
+
+.dashboard-blank{
+  margin-top: 60px;
+  text-align: center;
+}
+
+.customer-add-button{
+  background-color: $accent;
+  font-size: 0.80em;
+  font-weight: bold;
+  border-radius: 25px;
+  &:hover{
+    background: white;
+    border-color: $accent;
+    color: $accent;
   }
 }
