--- a/app/assets/stylesheets/diary.scss
+++ b/app/assets/stylesheets/diary.scss
@@ -1,13 +1,18 @@
 @import 'nav';
 
-.callout-diary-creation{
+.callout-diary-creatio{
   min-width: 350px;
-  max-width: 600px;
-  max-height: 400px;
+  max-width: 800px;
+  height: 100%;
+  width: 1000%;
+  overflow-y: scroll;
+  overflow-x: hidden;
   background: white;
   border-color: grey 1px;
   font-family: 'Roboto';
-
+  position: sticky;
+  top: 0;
+  margin-right: 0;
 
 }
 
@@ -24,13 +29,12 @@
   border-style: solid 5px grey;
   color: #33475b;
   border-top: transparent;
-  padding-bottom: 2px;
   margin-bottom: 0px;
 
 
   p{
     font-weight: bold;
-    font-size: 11px;
+    font-size: 12px;
   }
 
 }
@@ -41,21 +45,29 @@
   border: 1px;
   object-fit: cover;
   height: 200px;
+  margin-top: 10px;
   width: 100%;
-
 }
 .callout-image-form{
-  margin: 0;
-  padding: 0;
   border-radius: 8px;
 }
 
 .diary-updated{
   font-weight: bold;
   font-size: 9px;
+  padding-top: 10PX;
+}
+.diary-updated-border{
+  border-right: solid 1px #0a0a0a40;
+
 }
 .diary-name{
-  margin-top: 20px;
+  border-right: solid 1px #0a0a0a40;
+  border-left: solid 1px #0a0a0a40;
+  h3{
+    margin-top: 15px;
+    margin-left: 15px;
+  }
 }
 .diary-title{
   font-size: 1.5em;
@@ -100,5 +112,22 @@
 
 #diary-input{
   border-radius: 8px;
+}
+.dashboard-container{
+  width: 100%;
+  background: transparent;
+}
 
+.mini-comment{
+  border-radius: 10px;
+  color: #33475b;
+  overflow-x: scroll ;
+  .minibody{
+    font-size: 14px;
+    font-weight: normal;
+  }
+  .minititle{
+    font-size: 18px;
+    font-weight: bold;
+  }
 }
