-Handled issues of Heroku when creating a new customer

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -33,6 +33,10 @@ $accent: #1ac74f;
   text-align: left;
 }
 
+.menu-text{
+  margin-left: 20px;
+}
+
 .menu-icon::after{
   background: #FFF;
   background-size: 30px;
