--- a/app/views/layouts/_topbar_normal.html.erb
+++ b/app/views/layouts/_topbar_normal.html.erb
@@ -5,6 +5,7 @@
       <%- if current_user -%>
       <li class="dashboard-button"><%= link_to 'DASHBOARD', user_customers_path(current_user),  class: "dashboard-button customer-button button"%> </li>
       <li class="dashboard-button"><%= link_to 'CREATE CUSTOMER', new_user_customer_path(current_user),  class: "dashboard-button customer-button button"%> </li>
+      <li class="dashboard-button"><%= link_to 'USER FINDER', users_path,  class: "dashboard-button customer-button button"%> </li>
       <%- end -%>
     </ul>
   </div>
@@ -14,6 +15,7 @@
         <a class="nav-button" href="#">ABOUT</a>
       </li>
       <%- if current_user -%>
+
         <li ><%= link_to 'SIGN OUT', destroy_user_session_path, method: :delete, class: "nav-button" %></li>
       <%- else -%>
         <li ><%= link_to  'SIGN UP', new_user_registration_path, class: "nav-button"%></li>
