Added edit page for customer
Added routes for editing customers

Added styling for forms

--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -108,3 +108,13 @@
     color: $accent;
   }
 }
+
+.grid-customer-diary{
+  text-align: center;
+  padding: 40px;
+  padding-bottom: 20px;
+  
+  h3{
+    color: #33475b;
+  }
+}
