--- a/app/assets/stylesheets/diary.scss
+++ b/app/assets/stylesheets/diary.scss
@@ -71,6 +71,7 @@
 }
 .diary-title{
   font-size: 1.5em;
+  margin-left: 15px;
 }
 
 .diary-button{
@@ -128,6 +129,24 @@
   }
   .minititle{
     font-size: 18px;
+    font-weight: bold;
+  }
+}
+
+.link-edit{
+  width: 100%;
+  padding-left: 25px;
+  padding-right: 25px;
+  margin-left: 50%;
+}
+
+.button-grid{
+  margin: 10%;
+}
+
+.callout-edit{
+  label{
+    color: white;
     font-weight: bold;
   }
 }
