--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,15 @@
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
           <div class="field">
+            <div class="grid-x ">
+              <div class="cell auto small-offset-5 callout primary">
+                <h4>Choose a profile picture</h4>
+                <%= f.file_field :profile_photo, class:"picture-submit cell", onChange: "changePicture()" %>
+              </div>
+            </div>
+          </div>
+
+          <div class="field">
             <%= f.label :first_name %><br />
             <%= f.text_field :first_name%>
           </div>
