--- a/app/assets/stylesheets/searchpage.scss
+++ b/app/assets/stylesheets/searchpage.scss
@@ -26,7 +26,7 @@
 }
 
 .card-body-user{
-  max-height: 124px;
+  max-height: 100px;
   overflow-x: scroll;
   padding: 0;
 }
@@ -41,5 +41,6 @@
 }
 .form-image-user{
   margin-bottom: 20px;
+  height: 160px;
   border: solid 1px #0a0a0a40;
 }
