--- a/app/views/layouts/_topbar_customers.html.erb
+++ b/app/views/layouts/_topbar_customers.html.erb
@@ -4,7 +4,7 @@
       <li class="menu-text"><%= link_to image_tag("logo-secondary.png", width:"150"), root_path %> </li>
       <li class="dashboard-button"><%= link_to 'DASHBOARD', user_customers_path(current_user),  class: "dashboard-button customer-button button"%> </li>
       <li class="dashboard-button"><%= link_to 'CREATE CUSTOMER', new_user_customer_path(current_user),  class: "dashboard-button customer-button button"%> </li>
-      <li class="dashboard-button"><%= link_to 'USER FINDER', users_path,  class: "dashboard-button customer-button button"%> </li>
+      <li class="dashboard-button"><%= link_to 'FIND USERS', users_path,  class: "dashboard-button customer-button button"%> </li>
     </ul>
   </div>
   <div class="top-bar-right grid-container" id= "mobile-menu">
