-Entries added by user are referenced as "you" on the messages container

--- a/app/assets/stylesheets/diaryentries.scss
+++ b/app/assets/stylesheets/diaryentries.scss
@@ -18,7 +18,8 @@
 
 .messages-container{
   border-radius: 10px;
-  
+  overflow-x: hidden;
+  animation-duration: 1s;
 }
 
 .comment{
@@ -76,4 +77,7 @@
   padding: 0;
   border: solid 1px black;
 
+}
+.comment-foreign{
+  background: #F4F4F4;
 }
