- Added models test for all of my tables

--- a/app/assets/stylesheets/customercard.scss
+++ b/app/assets/stylesheets/customercard.scss
@@ -5,9 +5,16 @@
   margin: 30px 20px;
   margin-right: 30px;
   background: white;
-  height: 450px;
+  height: 400px;
   box-shadow: 0 10px 35px rgba(50,50,93,.1),0 2px 15px rgba(0,0,0,.07);
 }
+
+.card-user{
+
+  height: 450px;
+
+}
+
 
 .card-picture{
   width: 100%;
