--- a/app/assets/stylesheets/pages_background.scss
+++ b/app/assets/stylesheets/pages_background.scss
@@ -60,5 +60,5 @@ $main-color: #EAEEF2;
   -webkit-box-shadow: inset 0px 1px 35px 12px rgba(0,0,0,0.1);-moz-box-shadow: inset 0px 1px 35px 12px rgba(0,0,0,0.1);box-shadow: inset 0px 1px 35px 12px rgba(0,0,0,0.1);
   height: 100%;
   width: 100%;
-  overflow-y: auto;
+  overflow-x:scroll;
 }
